--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				<configuration>
 					<usedDependencies>
 						<!-- JSP Only -->
+						<dependency>com.aoindustries:ao-encoding-taglib</dependency>
 						<dependency>com.aoindustries:ao-taglib</dependency>
 						<dependency>com.aoindustries:ao-web-resources-taglib</dependency>
 						<dependency>javax.servlet:jstl</dependency>
@@ -99,6 +100,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 								<configuration>
 									<artifactItems>
 										<!-- Direct -->
+										<!-- JSP Only: <groupId>com.aoindustries</groupId><artifactId>ao-encoding-taglib</artifactId> -->
 										<artifactItem>
 											<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId>
 											<classifier>javadoc</classifier><includes>element-list, package-list</includes>
@@ -177,6 +179,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 						<configuration>
 							<offlineLinks>
 								<!-- Direct -->
+								<!-- JSP Only: <groupId>com.aoindustries</groupId><artifactId>ao-encoding-taglib</artifactId> -->
 								<offlineLink>
 									<url>https://aoindustries.com/ao-lang/apidocs/</url>
 									<location>${project.build.directory}/offlineLinks/com.aoindustries/ao-lang</location>
@@ -254,6 +257,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	<dependencyManagement>
 		<dependencies>
 			<!-- Direct -->
+			<dependency>
+				<groupId>com.aoindustries</groupId><artifactId>ao-encoding-taglib</artifactId><version>1.0.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+			</dependency>
 			<dependency>
 				<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>4.6.1${POST-SNAPSHOT}</version>
 			</dependency>
@@ -431,6 +437,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<dependencies>
 		<!-- Direct -->
+		<dependency>
+			<groupId>com.aoindustries</groupId><artifactId>ao-encoding-taglib</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId>
 		</dependency>
